changed to onSubmit + styling

--- a/LimitCalc/static/style.css
+++ b/LimitCalc/static/style.css
@@ -4,17 +4,12 @@ body{
 
 #input{
     display: flex;
-    width: 70%;
-}
-
-#output{
-    display: flex;
-    width: 30%;
-    font-size: 500%;
+    align-items: center;
+    width: 80%;
 }
 
 #lim{
-    font-size: 800%;
+    font-size: 600%;
     text-align: center;
 }
 
@@ -40,12 +35,20 @@ body{
 
 #limBlock{
     width: 20%;
+    flex-direction: column;
 }
 
 #fuctionBlock{
     width: 75%;
 }
 
-.ib{
+#output{
     display: inline-block;
+    width: 20%;
+    font-size: 300%;
+    height: 100%;
+}
+
+.if{
+    display: inline-flex;
 }
