--- a/LimitCalc/static/style.css
+++ b/LimitCalc/static/style.css
@@ -1,35 +1,41 @@
-body{
-    background-color: orange;
-}
+    body{
+        background-color: rgb(62, 122, 161);
+        background-image: url(http://www.wolframcdn.com/homepage/blue-circles-WA2.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;    
+        background-position-x: 50%;
+        background-position-y: 50%;
+    }
 
-#input{
-    display: flex;
-    align-items: center;
-    width: 80%;
-}
+    #input{
+        display: flex;
+        align-items: center;
+        width: 80%;
+    }
 
-#lim{
-    font-size: 600%;
-    text-align: center;
-}
+    #lim{
+        font-size: 300%;
+        text-align: center;
+    }
 
-#xToLabel{
-    font-size: 300%;
-    width: 50%;
-}
+    #xToLabel{
+        font-size: 150%;
+        width: 50%;
+    }
 
-#xTo{
-    font-size: 300%;
+    #xTo{
+        font-size: 150%;
     width: 50%;
 }
 
 #function{
-    font-size: 300%;
+    font-size: 150%;
     width: 85%
 }
 
 #calcButton{
-    font-size: 300%;
+    font-size: 150%;
     width: 80px;
 }
 
@@ -45,10 +51,18 @@ body{
 #output{
     display: inline-block;
     width: 20%;
-    font-size: 300%;
+    font-size: 150%;
     height: 100%;
 }
 
 .if{
     display: inline-flex;
+}
+
+#centerBlock {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
 }
