--- a/LimitCalc/static/style.css
+++ b/LimitCalc/static/style.css
@@ -1,30 +1,30 @@
-    body{
-        background-color: rgb(62, 122, 161);
-        background-image: url(http://www.wolframcdn.com/homepage/blue-circles-WA2.png);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-attachment: fixed;    
-        background-position-x: 50%;
-        background-position-y: 50%;
-    }
+body{
+    background-color: rgb(62, 122, 161);
+    background-image: url(http://www.wolframcdn.com/homepage/blue-circles-WA2.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;    
+    background-position-x: 50%;
+    background-position-y: 50%;
+}
 
-    #input{
-        display: flex;
-        align-items: center;
-        width: 80%;
-    }
+#input{
+    display: flex;
+    align-items: center;
+    width: 80%;
+}
 
-    #lim{
-        font-size: 300%;
-        text-align: center;
-    }
+#lim{
+    font-size: 300%;
+    text-align: center;
+}
 
-    #xToLabel{
-        font-size: 150%;
-        width: 50%;
-    }
+#xToLabel{
+    font-size: 150%;
+    width: 50%;
+}
 
-    #xTo{
+#xTo{
         font-size: 150%;
     width: 50%;
 }
@@ -64,5 +64,9 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
 
+#error {
+    position: absolute;
+    bottom: 10%;
 }
