--- a/LimitCalc/static/style.css
+++ b/LimitCalc/static/style.css
@@ -1,4 +1,8 @@
-body{
+* {
+    box-sizing: border-box;
+}
+
+body {
     background-color: rgb(62, 122, 161);
     background-image: url(http://www.wolframcdn.com/homepage/blue-circles-WA2.png);
     background-size: cover;
@@ -6,80 +10,132 @@ body{
     background-attachment: fixed;    
     background-position-x: 50%;
     background-position-y: 50%;
+    font-family: Tahoma, Geneva, sans-serif;
 }
 
-#input{
-    display: flex;
+#centerBlock {
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(255, 255, 255, 0.75);
+    padding: 5px;
+    border: 0px;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+/* Header */
+
+#header {
+    display: inline-flex;
     align-items: center;
-    width: 80%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    position: relative;
 }
 
-#lim{
+.title {
     font-size: 300%;
+}
+
+#titleImage {
+    width: 100px;
+    height: 74px;
+    background-image: url("http://www.userlogos.org/files/logos/Rog/wolframalpha.com_02.png");
+    background-repeat: no-repeat;
+    background-size: 150px 111px;
+    background-position: -25px -18.5px;
+}
+
+#titleRibojame {
+    color: red;
+}
+
+#titleBeta {
+    color: orange;
+}
+
+#titleExplanation {
+    font-size: 100%;
+    color: rgb(199, 147, 58);
+}
+
+#explanation {
+    padding-left: 5%;
+    color: gray;
+}
+
+/* Input & output */
+
+form {
+    display: grid;
+    grid-template-columns: auto 1fr 6fr auto;
+    grid-template-rows: 2fr auto 1fr auto;
+}
+
+#function, #xTo {
+    width: 100%;
+    font-size: 150%;
+    padding-left: 3px;
+    padding-right: 3px;
+    border: 1.5px solid orange;
+    border-radius: 6px;
+    outline-width: 0;
+}
+
+#function {
+    grid-column: 3;
+    grid-row: 2;
+}
+
+#xTo {
+    grid-column: 2;
+    grid-row: 4;
+}
+
+#lim {
+    grid-column: 1 / 3;
+    grid-row: 1 / 4;
+    font-size: 400%;
     text-align: center;
 }
 
-#xToLabel{
+#xToLabel {
+    grid-column: 1;
+    grid-row: 4;
     font-size: 150%;
     width: 50%;
+    margin-right: 3px;
 }
 
-#xTo{
-        font-size: 150%;
-    width: 50%;
-}
-
-#function{
-    font-size: 150%;
-    width: 85%;
-    margin-right: 2px;
-
-}
-
-#calcButton{
+#calcButton {
+    margin-left: 3px;
+    grid-column: 4;
+    grid-row: 2;
     font-size: 150%;
     width: 30px;
+    color: white;
     background-color: rgb(248, 130, 33);
-    border: 0px solid rgb(248, 130, 33);
+    border: 0px;
     text-align: center;
+    outline-width: 0;
+    border-radius: 4px;
 }
 
-#calcButton:hover{
+#calcButton:hover {
     background-color: rgb(206, 22, 8);
 }
 
-#limBlock{
-    width: 20%;
-    flex-direction: column;
-}
-
-#fuctionBlock{
-    width: 75%;
-}
-
-#output{
+/* #output {
+    grid-column: 5;
+    grid-row: 1 / 2;
     display: inline-block;
     width: 20%;
     font-size: 150%;
     height: 100%;
     padding-top: 3%;
-}
-
-.if{
-    display: inline-flex;
-}
-
-#centerBlock {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(255, 255, 255, 0.603);
-    padding: 5px;
-    border: 0px solid rgba(37, 37, 37, 0.603);
-    border-radius: 10px;
-    padding: 20px;
-}
+} */
 
 #error {
     position: absolute;
@@ -88,48 +144,4 @@ body{
     left: 50%;
     transform: translate(-50%, 0%);
     color: rgb(51, 4, 4);
-}
-
-.fields{
-    border: 2px solid orange;
-    border-radius: 10px;
-}
-
-.fields:focus{
-    outline-width: 0;
-}
-
-img{
-    height: 25%;
-    width: 25%;
-}
-
-span{
-    font-size: 300%;
-}
-
-#header{
-    display: inline-flex;
-    align-items: center;
-    left: 50%;
-    transform: translate(-50%, 0%);
-    position: relative;
-}
-
-#span1{
-    color: red;
-}
-
-#span2{
-    color: orange;
-}
-
-#message{
-    padding-left: 5%;
-    color: gray;
-}
-
-#span3{
-    font-size: 100%;
-    color: rgb(199, 147, 58);
 }
