--- a/LimitCalc/static/style.css
+++ b/LimitCalc/static/style.css
@@ -70,7 +70,7 @@ body {
 
 form {
     display: grid;
-    grid-template-columns: auto 1fr 6fr auto;
+    grid-template-columns: auto 1fr 8fr auto;
     grid-template-rows: 2fr auto 1fr auto;
 }
 
@@ -97,7 +97,7 @@ form {
 #lim {
     grid-column: 1 / 3;
     grid-row: 1 / 4;
-    font-size: 400%;
+    font-size: 350%;
     text-align: center;
 }
 
@@ -114,7 +114,6 @@ form {
     grid-column: 4;
     grid-row: 2;
     font-size: 150%;
-    width: 30px;
     color: white;
     background-color: rgb(248, 130, 33);
     border: 0px;
@@ -125,6 +124,10 @@ form {
 
 #calcButton:hover {
     background-color: rgb(206, 22, 8);
+}
+
+#output {
+    margin-top: 1em;
 }
 
 /* #output {
