more fucking with ui

--- a/LimitCalc/static/style.css
+++ b/LimitCalc/static/style.css
@@ -8,7 +8,7 @@
 
 body {
     background-color: rgb(62, 122, 161);
-    background-image: url(http://www.wolframcdn.com/homepage/blue-circles-WA2.png);
+    /* background-image: url(http://www.wolframcdn.com/homepage/blue-circles-WA2.png); */
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -130,18 +130,30 @@ form {
     background-color: rgb(206, 22, 8);
 }
 
+#calcButton:disabled {
+    background-color: gray;
+}
+
 #padding {
-    margin-top: 1em;
+    margin-top: 2em;
     text-align: center;
 }
 
-#error {
-    position: absolute;
-    bottom: 1%;
-    text-align: center;
-    left: 50%;
-    transform: translate(-50%, 0%);
-    color: rgb(51, 4, 4);
+.identedBlock {
+    margin-left: 2em;
+}
+
+.codeBlock {
+    font-family: Courier New, Courier, monospace;
+    color: rgb(30, 30, 30);
+}
+
+.marked {
+    background-color: orangered;
+}
+
+#output p span {
+    text-align: left !important;
 }
 
 /* Footer */
@@ -166,16 +178,6 @@ form {
 #footer p:last-child {
     float: right;
     margin-right: 1em;
-}
-
-/* MathJax stuff */
-
-#output {
-    text-align: center;
-}
-
-.mjx-chtml.MJXc-display {
-    display: inline-block;
 }
 
 /* For mobile */
