--- a/LimitCalc/static/style.css
+++ b/LimitCalc/static/style.css
@@ -145,15 +145,22 @@ form {
 
 .codeBlock {
     font-family: Courier New, Courier, monospace;
+    font-size: 110%;
     color: rgb(30, 30, 30);
 }
 
 .marked {
-    background-color: orangered;
+    background-color: rgb(255, 115, 0);
 }
 
-#output p span {
+#output > p > span {
     text-align: left !important;
+}
+
+#output {
+    border-top: 1px solid rgb(65, 65, 65);
+    display: none;
+    padding-top: 1em;
 }
 
 /* Footer */
